--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,21 +1,7 @@
 {
-	"deno.enable": true,
-	"deno.lint": true,
-	"deno.unstable": true,
+	"deno.enable": false,
 	"deno.config": "./deno.jsonc",
-	"[json]": {
-		"editor.defaultFormatter": "denoland.vscode-deno"
-	},
-	"[jsonc]": {
-		"editor.defaultFormatter": "denoland.vscode-deno"
-	},
-	"[markdown]": {
-		"editor.defaultFormatter": "denoland.vscode-deno"
-	},
 	"[typescript]": {
-		"editor.defaultFormatter": "denoland.vscode-deno"
-	},
-	"[typescriptreact]": {
 		"editor.defaultFormatter": "denoland.vscode-deno"
 	},
 	"typescript.preferGoToSourceDefinition": true
