feat: prisma 기반 hono 백엔드 서버 구현

--- a/deno.jsonc
+++ b/deno.jsonc
@@ -1,11 +1,9 @@
 {
+    "exclude": ["prisma"],
 	"fmt": {
 		"semiColons": false,
 		"lineWidth": 100,
 		"useTabs": true,
 		"proseWrap": "never"
-	},
-	"compilerOptions": {
-		"exactOptionalPropertyTypes": true
 	}
 }
