--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
 	"compilerOptions": {
 		"target": "ESNext",
 		"module": "ESNext",
+        "lib": ["ESNext", "dom", "esnext.disposable"],
 		"moduleResolution": "Bundler",
 		"noEmit": true,
 		"esModuleInterop": true,
