chore: 첫 프로젝트 설정

--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
 	"description": "",
 	"type": "module",
 	"scripts": {
+		"db:init": "npm exec prisma migrate dev -- --name dev",
+		"prod": "node --no-warnings=ExperimentalWarning --loader @swc-node/register/esm main.ts",
 		"dev": "node --no-warnings=ExperimentalWarning --loader @swc-node/register/esm --watch main.ts",
 		"test": "node --no-warnings=ExperimentalWarning --loader @swc-node/register/esm --test get_test.ts post_test.ts"
 	},
