refactor: 디렉터리 경로 정리 (#5)
* style: 포매터

* refactor: get, post, util 파일별로 분리

* refactor: patch, delete 경로, 재시작 리스너 분리

* refactor: applications, 오류 핸들러 분리

* test: API를 사용해 테스트

* refactor: 역할별로 경로에 정리

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 		"db:init": "npm exec prisma migrate dev -- --name dev",
 		"prod": "node --no-warnings=ExperimentalWarning --loader @swc-node/register/esm main.ts",
 		"dev": "node --no-warnings=ExperimentalWarning --loader @swc-node/register/esm --watch main.ts",
-		"test": "node --no-warnings=ExperimentalWarning --loader @swc-node/register/esm --test get_test.ts post_test.ts"
+		"test": "node --no-warnings=ExperimentalWarning --loader @swc-node/register/esm test.ts"
 	},
 	"prisma": {
 		"seed": "node --no-warnings=ExperimentalWarning --loader @swc-node/register/esm seed.ts"
@@ -30,6 +30,7 @@
 		"@swc-node/register": "^1.6.8",
 		"@types/node": "^20.8.3",
 		"prisma": "^5.4.1",
+		"tiny-glob": "^0.2.9",
 		"type-fest": "^4.4.0",
 		"typescript": "^5.2.2",
 		"zod-prisma-types": "^2.7.9"
