chore: 포매터 적용 확장자 추가

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
 	"deno.enable": false,
 	"deno.config": "./deno.jsonc",
-	"[typescript]": {
+	"[json][markdown][typescript][typescriptreact]": {
 		"editor.defaultFormatter": "denoland.vscode-deno"
 	}
 	// "typescript.preferGoToSourceDefinition": true
