--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"type": "module",
 	"scripts": {
 		"db:init": "npm exec prisma migrate dev -- --name dev",
-		"prod": "node --no-warnings=ExperimentalWarning --loader @swc-node/register/esm main.ts",
+		"start": "node --no-warnings=ExperimentalWarning --loader @swc-node/register/esm main.ts",
 		"dev": "node --no-warnings=ExperimentalWarning --loader @swc-node/register/esm --watch main.ts",
 		"test": "node --no-warnings=ExperimentalWarning --loader @swc-node/register/esm test.ts"
 	},
@@ -14,7 +14,7 @@
 		"seed": "node --no-warnings=ExperimentalWarning --loader @swc-node/register/esm seed.ts"
 	},
 	"engines": {
-		"node": ">=20.8.0"
+		"node": ">=18.16.1"
 	},
 	"author": "scarf",
 	"license": "AGPL-3.0-only",
@@ -31,7 +31,6 @@
 		"@types/node": "^20.8.3",
 		"prisma": "^5.4.1",
 		"tiny-glob": "^0.2.9",
-		"type-fest": "^4.4.0",
 		"typescript": "^5.2.2",
 		"zod-prisma-types": "^2.7.9"
 	}
